On Windows, assuan_sock_bind for AF_UNIX doesn't return error correctly.
Description
Description
Revisions and Commits
Revisions and Commits
| rA Assuan | |||
| rA70d454e1ff48 w32: Enable "w32_error" for assuan_sock_get_flag. | |||
| rAcc6c29735d59 w32: Fix errno for assuan_sock_bind failure. | |||
Related Objects
Related Objects
- Mentioned In
- T7163: Release libassuan 3.0.0 and 3.0.1
- Mentioned Here
- T7163: Release libassuan 3.0.0 and 3.0.1