w32: Fix errno for assuan_sock_bind failure.

* src/assuan-socket.c (_assuan_sock_bind): Use WSAGetLastError and the
mapping to set ERRNO.

--

GnuPG-bug-id: 7456
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>